Remove dead MODIFIERS_FIELD and unreachable pre-Java-12 branch in ReflectionUtil